composer repo name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "skiner/bpol",
+    "name": "bpol/ajaxFormValidation",
     "license": "proprietary",
     "type": "project",
     "autoload": {
