--- a/src/AjaxFormValidationBundle/Resources/config/config_ajax_validation.yml
+++ b/src/AjaxFormValidationBundle/Resources/config/config_ajax_validation.yml
@@ -8,5 +8,7 @@ ajax_form_validation:
             url: '((http|ftp|https)?:\/\/)?[\w\-_]+(\.[\w\-_]+)+([\w\-\.,@?^=%%&amp;:\/\+#]*[\w\-\@?^=%%&amp;\/\+#])?'
         fr:
             postCode: '[0-9]{5}'
+            phone: '\+?(33)?[\ \-]?([0-9\-\ ]{4,12})'
         pl:
             postCode: '[0-9]{1}\-[0-9]{3}'
+            phone: '\+?(48)?[\ \-]?([0-9\-\ ]{4,12})'
