--- a/src/AjaxFormValidationBundle/Resources/config/config_ajax_validation.yml
+++ b/src/AjaxFormValidationBundle/Resources/config/config_ajax_validation.yml
@@ -5,6 +5,8 @@ ajax_form_validation:
         default:
             postCode: '[0-9\-\ ]+'
             phone: '\+?[0-9\-\ ]+'
+            city: '[\p{L}\ 0-9\-]+'
+            street: '[\p{L}\ 0-9\-\.\:]+'
             url: '((http|ftp|https)?:\/\/)?[\w\-_]+(\.[\w\-_]+)+([\w\-\.,@?^=%%&amp;:\/\+#]*[\w\-\@?^=%%&amp;\/\+#])?'
         fr:
             postCode: '[0-9]{5}'
