--- a/src/AjaxFormValidationBundle/Resources/config/config_ajax_validation.yml
+++ b/src/AjaxFormValidationBundle/Resources/config/config_ajax_validation.yml
@@ -8,6 +8,7 @@ ajax_form_validation:
             city: '[\p{L}\ 0-9\-]+'
             street: '[\p{L}\ 0-9\-\.\:\/]+'
             url: '((http|ftp|https)?:\/\/)?[\w\-_]+(\.[\w\-_]+)+([\w\-\.,@?^=%%&amp;:\/\+#]*[\w\-\@?^=%%&amp;\/\+#])?'
+            passwordLength: 6
         fr:
             postCode: '[0-9]{5}'
             phone: '\+?(33)?[\ \-]?([0-9\-\ ]{4,12})'
